force-app/main/default/objects/Direcciones__c/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <label>Ciudad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>