force-app/main/default/objects/Direcciones__c/fields/Cod_Pais__c.field-meta.xml
<CustomField>
    <fullName>Cod_Pais__c</fullName>
    <formula>Pais__r.Cod_Pais__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod País</label>
    <type>Text</type>
</CustomField>