force-app/main/default/objects/Direcciones__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Dirección</label>
    <length>105</length>
    <type>Text</type>
</CustomField>