force-app/main/default/objects/Direcciones__c/fields/Estado_Provincia__c.field-meta.xml
<CustomField>
    <fullName>Estado_Provincia__c</fullName>
    <label>Estado/ Provincia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>