force-app/main/default/objects/Direcciones__c/fields/Nombre_Zona__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Zona__c</fullName>
    <formula>Text  (Pais__r.Nombre_Zonas__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Zona</label>
    <type>Text</type>
</CustomField>