force-app/main/default/objects/Direcciones__c/fields/Zona_Hot__c.field-meta.xml
<CustomField>
    <fullName>Zona_Hot__c</fullName>
    <formula>Text (Pais__r.Zona_Hot__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zona Hot</label>
    <type>Text</type>
</CustomField>